Extract behavior into individual functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <form id="geocoder">
       <label for="address">Address</label>
       <input type="text" name="address">
-      <input type="submit" value="Get Coordinates">
+      <input type="submit" value="Take me there!">
     </form>
 
     <div id="map" style="width:300px; height:300px; border:2px solid black;"></div>
